# integrated_script

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  LICENSE  Makefile  QUICK_START.md  README.md  build_exe.py  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-artifacts.yml  build-release.yml  code-quality.yml  release.yml
config/: default_config.yaml
scripts/: format_code.py  release.py  version_manager.py
scripts/docker/: Dockerfile.build
src/integrated_script/: __init__.py  main.py
src/integrated_script/config/: __init__.py  exceptions.py  settings.py
src/integrated_script/core/: __init__.py  base.py  logging_config.py  progress.py  utils.py  windows_compat.py
src/integrated_script/processors/: __init__.py  dataset_processor.py  file_processor.py  image_processor.py  label_processor.py  yolo_processor.py
src/integrated_script/ui/: __init__.py  cli.py  interactive.py  menu.py
